--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Project for github</h1>
     <h2>Github is great!</h2>
+    <h3>Office worker</h3>
+    <h3>Football</h3>
 </body>
 </html>
