--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Github is great!</h2>
     <h3>Office worker</h3>
     <h3>Football</h3>
+    <p>Let's go for a party</p>
 </body>
 </html>
