--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h3>Office worker</h3>
     <h3>Football</h3>
     <p>Let's go for a party</p>
+    <img src="istockphoto-1057506940-612x612.jpg" alt="">
 </body>
 </html>
