--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Project for github</h1>
     <h2>Github is great!</h2>
     <h3>Office worker</h3>
-    <h3>Football is life</h3>
+    <h3>Football is life yah!</h3>
     <p>Let's go for a party</p>
     <h3>Goals are important</h3>
     <h1>Preeff pharm</h1>
