--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <h1>Project for github</h1>
     <h2>Github is great!</h2>
     <h3>Office worker</h3>
-    <h3>Football</h3>
+    <h3>Football is life yah! again</h3>
     <p>Let's go for a party</p>
     <h3>Goals are important</h3>
     <h1>Preeff pharm</h1>
     <img src="istockphoto-1057506940-612x612.jpg" alt="">
     <p>talking from the stadium</p>
+    <h6>using css</h6>
 </body>
 </html>
